@@ -16,13 +16,11 @@
  */
 package org.apache.solr.core;
 
-import java.io.File;
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashMap;
@@ -30,10 +28,12 @@ import java.util.HashSet;
 import java.util.IdentityHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
 import org.apache.lucene.store.AlreadyClosedException;
 import org.apache.lucene.store.Directory;
+import org.apache.lucene.store.FilterDirectory;
 import org.apache.lucene.store.LockFactory;
 import org.apache.lucene.util.IOUtils;
 import org.apache.solr.common.SolrException;
@@ -46,7 +46,7 @@ import org.slf4j.LoggerFactory;
 /**
  * A {@link DirectoryFactory} impl base class for caching Directory instances per path. Most
  * DirectoryFactory implementations will want to extend this class and simply implement {@link
- * DirectoryFactory#create(String, LockFactory, DirContext)}.
+ * DirectoryFactory#create(String, LockFactory)}.
  *
  * <p>This is an expert class and these API's are subject to change.
  */
@@ -60,8 +60,8 @@ public abstract class CachingDirectoryFactory extends DirectoryFactory {
     private boolean deleteOnClose = false;
 
     public CacheValue(String path, Directory directory) {
-      this.path = path;
-      this.directory = directory;
+      this.path = Objects.requireNonNull(path);
+      this.directory = Objects.requireNonNull(directory);
       this.closeEntries.add(this);
       // for debug
       // this.originTrace = new RuntimeException("Originated from:");
@@ -367,10 +367,7 @@ public abstract class CachingDirectoryFactory extends DirectoryFactory {
   }
 
   private static boolean isSubPath(CacheValue cacheValue, CacheValue otherCacheValue) {
-    int one = cacheValue.path.lastIndexOf(File.separatorChar);
-    int two = otherCacheValue.path.lastIndexOf(File.separatorChar);
-
-    return otherCacheValue.path.startsWith(cacheValue.path + File.separatorChar) && two > one;
+    return Path.of(otherCacheValue.path).startsWith(Path.of(cacheValue.path));
   }
 
   @Override
@@ -395,25 +392,22 @@ public abstract class CachingDirectoryFactory extends DirectoryFactory {
   public final Directory get(String path, DirContext dirContext, String rawLockType)
       throws IOException {
     String fullPath = normalize(path);
+    Directory directory;
+    CacheValue cacheValue;
     synchronized (this) {
       if (closed) {
         throw new AlreadyClosedException("Already closed");
       }
 
-      final CacheValue cacheValue = byPathCache.get(fullPath);
-      Directory directory = null;
-      if (cacheValue != null) {
-        directory = cacheValue.directory;
-      }
-
-      if (directory == null) {
-        directory = create(fullPath, createLockFactory(rawLockType), dirContext);
+      cacheValue = byPathCache.get(fullPath);
+      if (cacheValue == null) {
+        directory = create(fullPath, createLockFactory(rawLockType));
         assert ObjectReleaseTracker.track(directory);
         boolean success = false;
         try {
-          CacheValue newCacheValue = new CacheValue(fullPath, directory);
-          byDirectoryCache.put(directory, newCacheValue);
-          byPathCache.put(fullPath, newCacheValue);
+          cacheValue = new CacheValue(fullPath, directory);
+          byDirectoryCache.put(directory, cacheValue);
+          byPathCache.put(fullPath, cacheValue);
           log.debug("return new directory for {}", fullPath);
           success = true;
         } finally {
@@ -422,12 +416,34 @@ public abstract class CachingDirectoryFactory extends DirectoryFactory {
           }
         }
       } else {
+        directory = cacheValue.directory;
         cacheValue.refCnt++;
         log.debug("Reusing cached directory: {}", cacheValue);
       }
-
-      return directory;
     }
+
+    Directory filteredDir = filterDirectory(directory, dirContext);
+    // If the directory is filtered/unwrapped, we need to wrap it in a ReleasableDirectory
+    // form to be able to recognize it when release(Directory) is called.
+    return filteredDir == directory ? directory : new ReleasableDirectory(filteredDir, cacheValue);
+  }
+
+  /**
+   * Potentially filters or unwraps the cached {@link Directory} depending on the intended use
+   * defined by the {@link org.apache.solr.core.DirectoryFactory.DirContext}.
+   *
+   * @param dir the {@link Directory} cached by this {@link CachingDirectoryFactory}.
+   * @param dirContext the nature or the intended use of the directory.
+   * @return a filtered or unwrapped version of the directory parameter, or directly the directory
+   *     parameter if it does not need any filtering/unwrapping.
+   */
+  protected Directory filterDirectory(Directory dir, DirContext dirContext) {
+    // If the DirContext is REPLICATION or BACKUP, then unwrap the Directory to allow the caller to
+    // copy raw bytes, skipping any additional logic that would be added by a FilterDirectory on top
+    // of the raw Directory.
+    return dirContext == DirContext.REPLICATION || dirContext == DirContext.BACKUP
+        ? FilterDirectory.unwrap(dir)
+        : dir;
   }
 
   /*
@@ -463,7 +479,7 @@ public abstract class CachingDirectoryFactory extends DirectoryFactory {
     // override global config
     if (args.get(SolrXmlConfig.SOLR_DATA_HOME) != null) {
       dataHomePath =
-          Paths.get((String) args.get(SolrXmlConfig.SOLR_DATA_HOME)).toAbsolutePath().normalize();
+          Path.of((String) args.get(SolrXmlConfig.SOLR_DATA_HOME)).toAbsolutePath().normalize();
     }
     if (dataHomePath != null) {
       log.info("{} = {}", SolrXmlConfig.SOLR_DATA_HOME, dataHomePath);
@@ -488,8 +504,13 @@ public abstract class CachingDirectoryFactory extends DirectoryFactory {
 
       CacheValue cacheValue = byDirectoryCache.get(directory);
       if (cacheValue == null) {
-        throw new IllegalArgumentException(
-            "Unknown directory: " + directory + " " + byDirectoryCache);
+        // The directory is not registered, it is a ReleasableDirectory wrapper.
+        try {
+          cacheValue = ((ReleasableDirectory) directory).cacheValue;
+        } catch (ClassCastException e) {
+          throw new IllegalArgumentException(
+              "Unknown directory: " + directory + " " + byDirectoryCache);
+        }
       }
       if (log.isDebugEnabled()) {
         log.debug(
@@ -591,5 +612,20 @@ public abstract class CachingDirectoryFactory extends DirectoryFactory {
 
   protected synchronized String getPath(Directory directory) {
     return byDirectoryCache.get(directory).path;
+  }
+
+  /**
+   * Delegates to a filtered or unwrapped directory, and allows this caching factory to release
+   * correctly the corresponding cached directory.
+   */
+  public static class ReleasableDirectory extends FilterDirectory {
+
+    private final CacheValue cacheValue;
+
+    private ReleasableDirectory(Directory filteredDir, CacheValue cacheValue) {
+      super(filteredDir);
+      assert cacheValue != null;
+      this.cacheValue = cacheValue;
+    }
   }
 }
